# drowsiness-detection

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
scripts/: extract_features_dataset.py  extract_features_video.py  prepare_uta_rldd.py  preprocess_face.py  preprocess_kaggle.py  train_cnn.py  train_face_cnn.py  train_temporal.py  train_video_transformer.py  webcam_demo.py
src/drowsiness_detection/: config.py  data.py  head_pose.py  temporal.py
src/drowsiness_detection.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/drowsiness_detection/models/: cnn.py  temporal.py
src/drowsiness_detection/utils/: geometry.py  mediapipe_facemesh.py
