[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drowsiness-detection"
version = "0.1.0"
description = "Real-time driver drowsiness detection via multi-cue facial analysis and temporal deep learning."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

